--- a/01/index.html
+++ b/01/index.html
@@ -1,1 +1,73 @@
-hello !
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Start</title>
+</head>
+<body>
+    <!-- Hello html 1111 -->
+    <!-- Ctrl +S  -->
+    <!-- CTRL + /  -->
+    <!-- SEO -->
+    <h1 id="anchor">Hello H1</h1>
+    <h2>World</h2>
+    <h3>h3</h3>
+    <h4>h4</h4>
+    <h5>
+        h5
+    </h5>
+    <h6>
+        h6
+    </h6>
+    <p>
+        Lorem ipsum <b> dolor sit amet, consectetur adipisicing elit.</b> Quos corrupti facere dolorum quas excepturi quibusdam. Nihil voluptatum et in atque, natus dolores recusandae quis <strong> quos esse, rerum ipsum culpa voluptatem?</strong>
+    </p>
+    <p>
+        Lorem ipsum <i> dolor sit amet, consectetur</i> adipisicing elit. <div> Quos corrupti facere dolorum quas</div> excepturi quibusdam. Nihil voluptatum et in atque, natus dolores recusandae <em> quis quos esse, rerum ipsum culpa voluptatem?</em>
+    </p>
+    <div>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem modi explicabo iusto repellat omnis veniam quo id quasi odio beatae debitis at voluptates vitae aut exercitationem nesciunt, alias quidem officiis!
+    </div>
+    <div>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem modi explicabo iusto repellat omnis veniam quo id quasi odio beatae debitis at voluptates vitae aut exercitationem nesciunt, alias quidem officiis!
+    </div>
+    <div>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem modi explicabo iusto repellat omnis veniam quo id quasi odio beatae debitis at voluptates vitae aut exercitationem nesciunt, alias quidem officiis!
+    </div>
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, debitis qui. Magnam ab neque error, suscipit consectetur 
+    </div>
+    <span>Read more</span> <span>arrow</span> <span>2 <sub>3</sub></span> <span>2 <sup>10</sup></span>
+    <h4>
+        <del>
+            Delete text
+        </del>
+    </h4>
+    <hr>
+    <pre>
+        Hello                     World
+        1223
+                text
+    </pre>
+    <hr>
+    <a href="https://caniuse.com/">Can I use</a>
+    <a href="#">Home page</a>
+    <a href="#anchor">Top page</a>
+    <a href="new.html">New html</a>
+
+    <ul>
+        <li>ul li 1</li>
+        <li>ul li 2</li>
+        <li>ul li 1</li>
+        <li>ul li 2</li>
+    </ul>
+    <ol>
+        <li>ol li 1</li>
+        <li>ol li 2</li>
+        <li>ol li 1</li>
+        <li>ol li 2</li>
+    </ol>
+</body>
+</html>
