--- a/05/parallax-page.html
+++ b/05/parallax-page.html
@@ -15,7 +15,9 @@
                     <img src="img/avatar.png" alt="">
                 </div>
                 <div class="nav">
-
+                    <ul>
+                        <li><a href="#"></a></li>
+                    </ul>
                 </div>
                 <!-- <div class="button-block">
                     button
